dubbo/dubbo-nacos-example/destination-rule-all.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demoservice
spec:
  host: providers:com.alibaba.edas.DemoService0:1.0.0:test.DEFAULT-GROUP.public.nacos
  subsets:
  - name: v1
    labels:
      appversion: v1
  - name: v2
    labels:
      appversion: v2
