dubbo/dubbo-nacos-example/vs-sayhello-v1-sayworld-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demoservice0
spec:
  hosts:
  - demoservice
  dubbo:
  - routes:
    - match:
      ### genericService.$invoke(method, new String[]{String.class.getName()}, new Object[]{name})
      - method:
          argc: 3
          args:
          - index: 1
            strValue:
              patterns:
              - exact: sayHello
            type: java.lang.String
      route:
      - destination:
          subset: v1
        weight: 100
    - match:
      - method:
          argc: 3
          args:
          - index: 1
            strValue:
              patterns:
              - exact: sayWorld
            type: java.lang.String
      route:
      - destination:
          subset: v2
        weight: 100
    services:
    - prefix: providers:com.alibaba.edas.DemoService0
